--- a/signup.html
+++ b/signup.html
@@ -22,6 +22,7 @@
 
     <!--Content-->
     <div class="flex flex-col lg:flex-row justify-center gap-x-10 gap-y-4 bg-white w-full max-w-[1064px] h-auto rounded-[24px] md:rounded-[40px] p-[24px] md:p-[32px] lg:p-[40px] select-none">
+      
       <!--Left-->
       <div class="order-2 lg:order-1 flex-1 flex flex-col justify-center items-start gap-y-[30px] self-stretch">
         <div class="-ml-1">
@@ -41,9 +42,10 @@
               <span class="text-[#474F7C] text-sm md:text-base ml-0.5">Saya Menerima
                 <a href="" class="font-semibold">Ketentuan </a> &
                 <a href="" class="font-semibold">Kebijakan Privasi </a>
+              </span>
             </div>
 
-            <input type="checkbox" name="remember_me" id="remember_me" class="scale-[1.2] mr-0.5 cursor-pointer text-sm md:text-base">
+            <input type="checkbox" name="persetujuan" id="persetujuan" class="scale-[1.2] mr-0.5 cursor-pointer text-sm md:text-base">
           </div>
           <button class="bg-[#1E3465] text-white text-base font-semibold rounded-[12px] py-3">
             Sign up
@@ -56,8 +58,8 @@
         </div>
       </div>
 
-      <!--Left-->
-      <div class="order-1 lg-order-2 w-full lg:w-auto flex-auto lg:flex-1 flex justify-start lg:justify-center items-center self-center">
+      <!--Right-->
+      <div class="order-1 lg:order-2 w-full lg:w-auto flex-auto lg:flex-1 flex justify-start lg:justify-center items-center self-center">
         <img src="assets/images/mother-baby.webp" class="aspect-square w-[360px] lg:w-full" alt="Mother and Baby">
       </div>
       
