selesai membuat register success page

--- a/register-success.html
+++ b/register-success.html
@@ -23,21 +23,21 @@
     flex justify-center items-center 
     px-4 py-20"
   >
-  <div class="flex flex-col bg-white justify-center items-center w-full max-w-[1064px] h-auto rounded-[24px] md:rounded-[40px] py-[122px] md:py[102] lg:py-[110px] gap-x-10 gap-y-4 select-none">
+  <div class="flex flex-col bg-white justify-center items-center w-full max-w-[1064px] h-auto rounded-[24px] md:rounded-[40px] py-[130px] md:py[102px] lg:py-[114px] px-3 gap-y-4 select-none">
     <div class="w-full lg:w-auto flex-auto lg:flex-1 flex justify-center items-center self-center" >
-        <img src="assets/images/edit 1.png" class="w-[105px]" alt="Mother and Baby">
+      <img src="assets/images/edit 1.png" class="w-[105px]" alt="Mother and Baby">
     </div>
 
     <div class="flex-1 flex flex-col justify-center items-center mb-5">
-        <h1 class="text-[#272C49] text-[27px] md:text-[33px] font-extrabold font-opensans mb-4">You have been Registered!</h1>
-        <p class="text-[#272C49] text-sm md:text-base text-center mb-1">Jangan Lupa untuk cek inbox email mu untuk<br>mengaktivasi akun</p>
+      <h1 class="text-[#272C49] text-[27px] md:text-[33px] text-center font-extrabold font-opensans mb-4">You have been Registered!</h1>
+      <p class="text-[#272C49] text-sm md:text-base text-center mb-1">Jangan Lupa untuk cek inbox email mu untuk<br>mengaktivasi akun</p>
     </div>
 
-    <div class="w-[460px] flex flex-col -mr-2">
-        <button class="bg-[#1E3465] text-white text-base font-semibold rounded-md py-3">
-          Go to Login Page
-        </button>
-      </div>
+    <div class="w-full max-w-[460px] flex flex-col">
+      <button class="bg-[#1E3465] text-white text-base font-semibold rounded-md py-3">
+        Go to Login Page
+      </button>
+    </div>
   </div>
   
   <script src="script.js"></script>
