--- a/register-success.html
+++ b/register-success.html
@@ -25,7 +25,7 @@
   >
   <div class="flex flex-col bg-white justify-center items-center w-full max-w-[1064px] h-auto rounded-[24px] md:rounded-[40px] py-[130px] md:py[102px] lg:py-[114px] px-3 gap-y-4 select-none">
     <div class="w-full lg:w-auto flex-auto lg:flex-1 flex justify-center items-center self-center" >
-      <img src="assets/images/edit 1.png" class="w-[105px]" alt="Mother and Baby">
+      <img src="assets/images/register-success.webp" class="w-[105px]" alt="Mother and Baby">
     </div>
 
     <div class="flex-1 flex flex-col justify-center items-center mb-5">
