--- a/register-success.html
+++ b/register-success.html
@@ -30,7 +30,7 @@
 
     <div class="flex-1 flex flex-col justify-center items-center mb-5">
       <h1 class="text-[#272C49] text-[27px] md:text-[33px] text-center font-extrabold font-opensans mb-4">You have been Registered!</h1>
-      <p class="text-[#272C49] text-sm md:text-base text-center mb-1">Jangan Lupa untuk cek inbox email mu untuk<br>mengaktivasi akun</p>
+      <p class="text-[#272C49] text-sm md:text-base text-center mb-1">Jangan Lupa untuk cek inbox email mu untuk <br class="hidden md:block">mengaktivasi akun</p>
     </div>
 
     <div class="w-full max-w-[460px] flex flex-col">
