--- a/articles-content.html
+++ b/articles-content.html
@@ -57,9 +57,9 @@
           <nav>
             <ul class="flex flex-col justify-center items-center gap-y-6">
               <li><a href="index.html" class="text-xl text-white hover:text-[#FFCB40] duration-300 ease-in-out">Home</a></li>
-              <li><a href="index.html" class="text-xl text-white hover:text-[#FFCB40] duration-300 ease-in-out">Features</a></li>
+              <li><a href="index.html#features" class="text-xl text-white hover:text-[#FFCB40] duration-300 ease-in-out">Features</a></li>
               <li><a href="articles.html" class="text-xl text-white hover:text-[#FFCB40] duration-300 ease-in-out">Articles</a></li>
-              <li><a href="index.html" class="text-xl text-white hover:text-[#FFCB40] duration-300 ease-in-out">Reviews</a></li>
+              <li><a href="index.html#reviews" class="text-xl text-white hover:text-[#FFCB40] duration-300 ease-in-out">Reviews</a></li>
               <span class="w-[120px] border-t-2 border-[#FFCB40]"></span>
               <li><a href="signup.html" class="text-xl text-white hover:text-[#FFCB40] duration-300 ease-in-out">Get Started</a></li>
             </ul>
@@ -228,9 +228,9 @@
         <nav class="order-3 lg:order-4">
           <ul class="flex flex-col lg:flex-row items-start lg:items-center gap-y-3 gap-x-10">
             <li><a href="index.html" class="text-white text-sm lg:text-base hover:text-[#FFCB40] duration-300 ease-in-out">Home</a></li>
-            <li><a href="index.html" class="text-white text-sm lg:text-base hover:text-[#FFCB40] duration-300 ease-in-out">Features</a></li>
+            <li><a href="index.html#features" class="text-white text-sm lg:text-base hover:text-[#FFCB40] duration-300 ease-in-out">Features</a></li>
             <li><a href="articles.html" class="text-white text-sm lg:text-base hover:text-[#FFCB40] duration-300 ease-in-out">Articles</a></li>
-            <li><a href="index.html" class="text-white text-sm lg:text-base hover:text-[#FFCB40] duration-300 ease-in-out">Reviews</a></li>
+            <li><a href="index.html#reviews" class="text-white text-sm lg:text-base hover:text-[#FFCB40] duration-300 ease-in-out">Reviews</a></li>
           </ul>
         </nav>
       </div>
