ubah dari button jadi a

--- a/register-success.html
+++ b/register-success.html
@@ -33,11 +33,11 @@
       <p class="text-[#272C49] text-sm md:text-base text-center mb-1">Jangan Lupa untuk cek inbox email mu untuk <br class="hidden md:block">mengaktivasi akun</p>
     </div>
 
-    <div class="w-full max-w-[460px] flex flex-col">
-      <button class="bg-[#1E3465] text-white text-base font-semibold rounded-md py-3">
+    <a class="w-full max-w-[460px] flex" href="login.html">
+      <button class="w-full bg-[#1E3465] text-white text-base font-semibold rounded-md py-3">
         Go to Login Page
       </button>
-    </div>
+    </a>
   </div>
   
   <script src="script.js"></script>
