revisi link href

--- a/articles.html
+++ b/articles.html
@@ -37,28 +37,28 @@
           <ul class="flex items-center gap-x-10">
             <li>
               <a
-                href="#"
+                href="index.html"
                 class="text-white hover:text-[#FFCB40] duration-300 ease-in-out"
                 >Home</a
               >
             </li>
             <li>
               <a
-                href="#features"
+                href="index.html#features"
                 class="text-white hover:text-[#FFCB40] duration-300 ease-in-out"
                 >Features</a
               >
             </li>
             <li>
               <a
-                href="articles.html"
+                href="#"
                 class="text-white hover:text-[#FFCB40] duration-300 ease-in-out"
                 >Articles</a
               >
             </li>
             <li>
               <a
-                href="#reviews"
+                href="index.html#reviews"
                 class="text-white hover:text-[#FFCB40] duration-300 ease-in-out"
                 >Reviews</a
               >
@@ -107,28 +107,28 @@
               <ul class="flex flex-col justify-center items-center gap-y-6">
                 <li>
                   <a
-                    href="#"
+                    href="index.html"
                     class="text-xl text-white hover:text-[#FFCB40] duration-300 ease-in-out"
                     >Home</a
                   >
                 </li>
                 <li>
                   <a
-                    href="#features"
+                    href="index.html#features"
                     class="text-xl text-white hover:text-[#FFCB40] duration-300 ease-in-out"
                     >Features</a
                   >
                 </li>
                 <li>
                   <a
-                    href="articles.html"
+                    href="#"
                     class="text-xl text-white hover:text-[#FFCB40] duration-300 ease-in-out"
                     >Articles</a
                   >
                 </li>
                 <li>
                   <a
-                    href="#reviews"
+                    href="index.html#reviews"
                     class="text-xl text-white hover:text-[#FFCB40] duration-300 ease-in-out"
                     >Reviews</a
                   >
@@ -242,7 +242,7 @@
                   </div>
                   <div class="flex flex-col items-start mt-4">
                     <p class="text-sm text-[#898989]">2 September 2023</p>
-                    <a href="5-kebiasaan-bayi-baru-lahir.html"
+                    <a href="articles/5-kebiasaan-bayi-baru-lahir.html"
                       class="font-opensans text-[22px] text-[#272C49] font-bold lh__2"
                     >
                       5 Kebiasaan Bayi Baru Lahir yang Harus Diketahui Oleh Ibunda
@@ -515,28 +515,28 @@
             >
               <li>
                 <a
-                  href="#"
+                  href="index.html"
                   class="text-white text-sm lg:text-base hover:text-[#FFCB40] duration-300 ease-in-out"
                   >Home</a
                 >
               </li>
               <li>
                 <a
-                  href="#features"
+                  href="index.html#features"
                   class="text-white text-sm lg:text-base hover:text-[#FFCB40] duration-300 ease-in-out"
                   >Features</a
                 >
               </li>
               <li>
                 <a
-                  href="articles.html"
+                  href="#"
                   class="text-white text-sm lg:text-base hover:text-[#FFCB40] duration-300 ease-in-out"
                   >Articles</a
                 >
               </li>
               <li>
                 <a
-                  href="#reviews"
+                  href="index.html#reviews"
                   class="text-white text-sm lg:text-base hover:text-[#FFCB40] duration-300 ease-in-out"
                   >Reviews</a
                 >
