--- a/dashboard/baby-chart.html
+++ b/dashboard/baby-chart.html
@@ -25,7 +25,7 @@
     <aside
       class="hidden min-[840px]:flex fixed top-0 left-0 flex-col justify-between items-center bg-[#272C49] h-screen px-[14px] py-[40px] max-w-[80px]"
     >
-      <a href="../dasboard/index.html">
+      <a href="../index.html">
         <img
           src="../assets/icons/only-baby-logo.png"
           alt="Only Baby Care Logo"
@@ -35,7 +35,7 @@
       <nav>
         <ul class="flex flex-col justify-center items-center gap-y-[54px]">
           <li>
-            <a href="#">
+            <a href="./index.html">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="28"
@@ -63,7 +63,7 @@
             </a>
           </li>
           <li>
-            <a href="../dashboard/baby-data.html">
+            <a href="baby-data.html">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="28"
@@ -91,7 +91,7 @@
             </a>
           </li>
           <li>
-            <a href="../dashboard/data-chart.html">
+            <a href="./data-chart.html">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -119,7 +119,7 @@
             </a>
           </li>
           <li>
-            <a href="../dashboard/immunization.html">
+            <a href="./immunization.html">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="28"
@@ -216,7 +216,7 @@
             <ul class="flex flex-col justify-between items-center">
               <li class="w-full">
                 <a
-                  href="#"
+                  href="./index.html"
                   class="block w-full flex justify-start items-center gap-x-4 px-5 py-5 border-b border-white/20"
                 >
                   <svg
@@ -248,7 +248,7 @@
               </li>
               <li class="w-full">
                 <a
-                  href="../dashboard/baby-data.html"
+                  href="./baby-data.html"
                   class="block w-full flex justify-start items-center gap-x-4 px-5 py-5 border-b border-white/20"
                 >
                   <svg
@@ -280,7 +280,7 @@
               </li>
               <li class="w-full">
                 <a
-                  href="../dashboard/baby-chart.html"
+                  href="./baby-chart.html"
                   class="block w-full flex justify-start items-center gap-x-4 px-5 py-5 border-b border-white/20"
                 >
                   <svg
@@ -313,7 +313,7 @@
               </li>
               <li class="w-full">
                 <a
-                  href="../dashboard/immunization.html"
+                  href="./immunization.html"
                   class="block w-full flex justify-start items-center gap-x-4 px-5 py-5 border-b border-white/20"
                 >
                   <svg
