Memperbaiki gap & responsive design dashboard main

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -345,7 +345,7 @@
     <div class="min-[840px]:pl-[78px] pt-12 min-[840px]:pt-0 pb-12 xl:pb-0">
       <div class="flex flex-col xl:flex-row justify-between w-full h-auto xl:h-screen px-[20px] sm:px-[35px] min-[840px]:pl-[55px] min-[840px]:pr-[55px] xl:pr-0 gap-x-[55px] select-none">
         <!-- begin::Left Dashboard -->
-        <div class="py-10 flex flex-col w-full xl:max-w-[900px] justify-between gap-y-[30px] xl:gap-y-0">
+        <div class="py-10 flex flex-col w-full gap-y-[30px] xl:gap-y-[20px] min-[1600px]:gap-y-[30px]">
           <!-- begin::Welcoming -->
           <div class="relative w-full bg-[#F8D16D] h-auto sm:h-[210px] flex justify-center items-center p-[30px] rounded-[20px] overflow-hidden">
             <svg class="absolute top-0 left-0 z-10" xmlns="http://www.w3.org/2000/svg" width="414" height="240" viewBox="0 0 414 240" fill="none">
@@ -478,7 +478,7 @@
         <!-- end::Left Dashboard -->
 
         <!-- begin::Right Dashboard -->
-        <div class="p-6 sm:p-8 min-[840px]:p-10 flex flex-col justify-between w-full xl:max-w-[435px] bg-white shadow-[0_4px_8px_0px_rgba(0,0,0,0.10)] gap-y-10 xl:gap-y-0 rounded-2xl xl:rounded-none">
+        <div class="p-6 sm:p-8 min-[840px]:p-10 flex flex-col w-full xl:max-w-[435px] bg-white shadow-[0_4px_8px_0px_rgba(0,0,0,0.10)] gap-y-10 xl:gap-y-[14px] min-[1600px]:gap-y-[30px] rounded-2xl xl:rounded-none">
           <div class="flex items-center gap-x-3">
             <img src="../assets/images/users/brenda-s.png" alt="User's Profile Picture" class="w-[50px] h-[50px] shrink-0 rounded-full">
             <div>
@@ -494,7 +494,7 @@
           <div class="flex flex-col gap-y-3">
             <h3 class="font-bold text-[#272C49]">Kebutuhan Harian</h3>
   
-            <div class="flex flex-col w-full bg-[#272C49] justify-center items-center text-center p-[32px] rounded-[16px] gap-y-2 shadow-[0_2px_4px_0px_rgba(0,0,0,0.10)]">
+            <div class="flex flex-col w-full bg-[#272C49] justify-center items-center text-center p-[26px] rounded-[16px] gap-y-2 shadow-[0_2px_4px_0px_rgba(0,0,0,0.10)]">
               <div class="w-[40px] h-[40px] bg-[#6BD147] flex justify-center items-center rounded-xl">
                 <span class="font-bold text-white text-xl">-</span>
               </div>
