ubah ukuran h1 dan p

--- a/dashboard/immunization.html
+++ b/dashboard/immunization.html
@@ -345,10 +345,10 @@
     <div class="min-[840px]:pl-[62px] pt-12 min-[840px]:pt-0 pb-12 xl:pb-0">
       <div class="flex flex-col w-full h-auto xl:h-screen py-10 px-[20px] sm:px-[35px] min-[840px]:pl-[55px] gap-y-6">
         <div class="w-full flex flex-col text-start mb-2">
-          <h1 class="font-opensans text-[32px] text-[#272C49] font-extrabold">
+          <h1 class="font-opensans text-[28px] min-[840px]:text-[32px] text-[#272C49] font-extrabold">
             Imunisasi
           </h1>
-          <p class="text-[#898989]">
+          <p class="text-sm min-[840px]:text-[#898989]">
             Berikut merupakan list vaksin yang diperlukan oleh anak
           </p>
         </div>
