selesai revisi ukuran h1 dan p

--- a/dashboard/immunization.html
+++ b/dashboard/immunization.html
@@ -348,7 +348,7 @@
           <h1 class="font-opensans text-[28px] min-[840px]:text-[32px] text-[#272C49] font-extrabold">
             Imunisasi
           </h1>
-          <p class="text-sm min-[840px]:text-[#898989]">
+          <p class="text-[#898989] text-sm min-[840px]:text-base">
             Berikut merupakan list vaksin yang diperlukan oleh anak
           </p>
         </div>
